<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisners.patient.Activity.Auth.ChangePasswordActivity">

    <include layout="@layout/round_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/size_20">

        <TextView
            android:layout_width="@dimen/size_200"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/size_30"
            android:fontFamily="@font/poppins_regular"
            android:includeFontPadding="false"
            android:text="@string/replace_the_password_with_the_new_one"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/ivChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_svg_change_password" />
<LinearLayout
    android:id="@+id/lv_old_pass"
    android:visibility="gone"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_20"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/old_password"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_old_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="@color/grey"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editCOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:background="@drawable/btn_grey_transparent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/size_14"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_20"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/new_password"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_newPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="@color/grey"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editCPassPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:background="@drawable/btn_grey_transparent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/size_14"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_20"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/confirm_new_password"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_cnfPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textColorHint="@color/grey"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editCPassCnfPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:background="@drawable/btn_grey_transparent"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center_vertical"
                android:hint="@string/re_type_new_password"
                android:inputType="textPassword"
                android:padding="@dimen/size_10"
                android:singleLine="true"
                android:text=""
                android:textSize="@dimen/size_14"
                tools:ignore="SpUsage" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCPassSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginBottom="@dimen/size_10"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/change_password"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

    </LinearLayout>


</LinearLayout>