<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisners.patient.Activity.Auth.ForgotPasswordActivity">

    <include layout="@layout/round_header" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/size_30">

        <ImageView
            android:id="@+id/ivForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_svg_forgot_password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/size_20"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/mobile_number"
            android:textColor="@color/black"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <EditText
            android:id="@+id/editForgotMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4"
            android:background="@drawable/btn_grey_transparent"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:hint="@string/hintPhone"
            android:inputType="phone"
            android:padding="@dimen/size_10"
            android:singleLine="true"
            android:text=""
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_30"
            android:layout_marginBottom="@dimen/size_10"
            android:background="@drawable/button_primary"
            android:fontFamily="@font/poppins_semi_bold"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/size_14"
            tools:ignore="SpUsage" />

    </LinearLayout>
</LinearLayout>